log

Thu 14 Mar 2024 08:38:16 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:7: error: unused variable ‘max’ [-Werror=unused-variable]
   14 |   int max = arr[0];
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
0875884
Thu 14 Mar 2024 08:38:23 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|7
total_score: 0/70
7b80f26
Thu 14 Mar 2024 08:40:18 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|7
total_score: 0/70
6a79a37
Thu 14 Mar 2024 08:40:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
da84b6e
Thu 14 Mar 2024 08:44:07 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:37:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   37 |   return arr;
      |          ^~~
exercises.c:28:6: note: declared here
   28 | void reverseArray(int arr[], int size)
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9e94cde
Thu 14 Mar 2024 08:44:18 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 20/70
e448f12
Thu 14 Mar 2024 08:48:33 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
1199e5a
Thu 14 Mar 2024 08:53:54 PM UTC: 
 exercises.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:72:3: error: ‘totalSize’ undeclared (first use in this function)
   72 |   totalSize = size1 + size2;
      |   ^~~~~~~~~
exercises.c:72:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6d0fc1f
Thu 14 Mar 2024 08:54:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
5d22d04
Thu 14 Mar 2024 09:06:01 PM UTC: 
 exercises.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:98:3: error: unknown type name ‘bool’
   98 |   bool esAscendente = true;
      |   ^~~~
exercises.c:6:1: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    5 | #include <string.h>
  +++ |+#include <stdbool.h>
    6 | 
exercises.c:98:23: error: ‘true’ undeclared (first use in this function)
   98 |   bool esAscendente = true;
      |                       ^~~~
exercises.c:98:23: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
exercises.c:98:23: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:99:3: error: unknown type name ‘bool’
   99 |   bool esDescendente = true;
      |   ^~~~
exercises.c:99:3: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
exercises.c:103:24: error: ‘false’ undeclared (first use in this function)
  103 |         esAscendente = false;
      |                        ^~~~~
exercises.c:103:24: note: ‘false’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
Compilation failed
64e378d
Thu 14 Mar 2024 09:06:21 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|2
total_score: 50/70
7d4c6f6
Fri 15 Mar 2024 12:05:38 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|1
total_score: 60/70
8ff093f
